Bug 1912211 - Handle SurfaceTexture transform in GLBlitHelper. r=gfx-reviewers,bradwerth

Android SurfaceTextures provide a transform that should be applied to
texture coordinates when rendering. Usually this is simply a y-flip,
but not always. While we handle the transform correctly in our regular
rendering path, GLBlitHelper (used for example when using a video as a
webgl texture) currently hard-codes a y-flip. This patch replaces the
hardcoded y-flip with the provided transform.

Differential Revision: https://phabricator.services.mozilla.com/D218834